# photo-tagger

./: .gitignore  README.md  photo_tagger.py  pyproject.toml  requirements.txt  run.sh  tag_photo.py  tagimgs.sh
src/photo_tagger/: __init__.py  app.py  tagger.py
src/photo_tagger/static/: app.js  style.css
src/photo_tagger/templates/: index.html
